# lila-hkh-glacier

./: README.md  docker_env  environment.yml  mypy.ini  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md
docker/: Dockerfile  Dockerfile-dev  Dockerfile-script-runner  build  console  docs-server  env  format  notebook  run-script  stac  test
docs/: conf.py  index.rst  installation_and_basic_usage.ipynb
examples/: fused-collection.json  fused-item.json  slice-collection.json  slice-item.json
examples/fused_collection/: LE07_134040_20070922_cog.json  collection.json
examples/slice_collection/: collection.json
scripts/: lint
src/stactools/lila_hkh_glacier/: __init__.py  cog.py  commands.py  constants.py  stac.py  utils.py
tests/: test_commands.py  test_module.py
tests/data-files/: slices.geojson
tests/data-files/raster_data/: LE07_134040_20070922_clip.tif
tests/data-files/slices/: slice_14_mask_062.npy  slice_6_mask_072.npy
